--- a/index.html
+++ b/index.html
@@ -1,27 +1,16 @@
-<!-- <!doctype html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0;url=demo/" />
     <title>polymer-checklist</title>
   </head>
-  <body> -->
+  <body>
     <!--
         ELEMENT API DOCUMENTATION SUPPORT COMING SOON
         Visit demo/index.html to see live examples of your element running.
         This page will automatically redirect you there when run in the browser
         with `polymer serve`.
-
+      -->
   </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-<h1> Hello world</h1>
-</body>
 </html>
